Fix a really annoying layout issue, get fancy with a sticky header

--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,8 @@ html, body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-#root {
-  height: 100%;
-}
-
 #root > header + * {
-  height: calc(100% - theme('spacing.header'))
+  min-height: calc(100vh - theme('spacing.header'))
 }
 
 /* Tailwind default is disabled, we want more space at smaller sizes */
@@ -30,7 +26,7 @@ html, body {
 
 @media (min-width: theme('screens.md')) {
   #root > header + * {
-    height: calc(100% - theme('spacing.header-md'))
+    min-height: calc(100vh - theme('spacing.header-md'))
   }
   
   .container {
